aws-infra-terraform/aws-2tier/modules/security-groups/main.tf
#ALB is open to the world on port 80
resource "aws_security_group" "alb_sg" {
  name        = "${var.project}-alb-sg"
  description = "Security group for ALB"
  vpc_id      = var.vpc_id
    ingress {
        from_port   = 80
        to_port     = 80
        protocol    = "tcp"
        cidr_blocks = ["0.0.0.0/0"]
    }
    ingress {
        from_port   = 443
        to_port     = 443
        protocol    = "tcp"
        cidr_blocks = ["0.0.0.0/0"]
        }
    egress {    
        from_port   = 0
        to_port     = 0
        protocol    = "-1"
        cidr_blocks = ["0.0.0.0/0"]
    }
    tags = {
        Name = "${var.project}-alb-sg"
    }
}

#App servers SG - only allow ALB to talk to app servers on port 80
resource "aws_security_group" "app_sg" {
  name        = "${var.project}-app-sg"
  description = "Security group for Application servers"        
    vpc_id      = var.vpc_id
        ingress {
            from_port       = 80
            to_port         = 80
            protocol        = "tcp"
            security_groups = [aws_security_group.alb_sg.id]
        }
        egress {    
            from_port   = 0
            to_port     = 0
            protocol    = "-1"
            cidr_blocks = ["0.0.0.0/0"]
        }
    tags = {
        Name = "${var.project}-app-sg"
    }
}   

#DB servers SG - only allow app servers to talk to DB servers on port 3306
resource "aws_security_group" "db_sg" {
  name        = "${var.project}-db-sg"
  description = "Security group for Database servers"        
    vpc_id      = var.vpc_id
        ingress {
            from_port       = 3306
            to_port         = 3306
            protocol        = "tcp"
            security_groups = [aws_security_group.app_sg.id]
        }
        egress {    
            from_port   = 0
            to_port     = 0
            protocol    = "-1"
            cidr_blocks = ["0.0.0.0/0"] 
        }
    tags = {
        Name = "${var.project}-db-sg"
    }
}
